cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificExprsCheckLevel3.cif.check.err
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 15, column 1: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 19, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 25, column 5: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 51, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 56, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 61, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 120, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 127, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 155, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 189, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 218, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 236, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 266, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 276, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 320, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel3.cif": Semantic warning at line 330, column 3: Duplicate state invariant.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  --------------------------------------------
  (1/7) A cast expression from string is used.
  --------------------------------------------
   * In group "CAST_EXPRS_STRING_TO_BOOLEAN":
     - invariant not <bool>"false";
                     ^
   * In group "CAST_EXPRS_STRING_TO_INT":
     - invariant 1 = <int>"1";
                     ^
   * In group "CAST_EXPRS_STRING_TO_REAL":
     - invariant 1.0 = <real>"1.0";
                       ^

  ------------------------------------------
  (2/7) A cast expression to string is used.
  ------------------------------------------
   * In group "CAST_EXPRS_AUTOMATON_TO_STRING":
     - invariant "A" = <string>X;
                       ^
   * In group "CAST_EXPRS_BOOLEAN_TO_STRING":
     - invariant "true" = <string>true;
                          ^
   * In group "CAST_EXPRS_INT_TO_STRING":
     - invariant "1" = <string>1;
                       ^
   * In group "CAST_EXPRS_REAL_TO_STRING":
     - invariant "1.1" = <string>1.1;
                         ^
   * In location "X.A":
     - invariant "A" = <string>self;
                       ^

  ----------------------------------------------------
  (3/7) A standard library function reference is used.
  ----------------------------------------------------
   * In group "FUNC_CALLS":
     - invariant abs(1) = 1;
                 ^
   * In group "FUNC_REFS_STD_LIB":
     - invariant abs(1) = 1;
                 ^

  ----------------------------------------------------------------------------------
  (4/7) A switch expression is used with a ranged integer typed (part of its) value.
  ----------------------------------------------------------------------------------
   * In group "SWITCH_EXPRS":
     - invariant switch 5: case 5: true end;
                 ^

  --------------------------------------------------
  (5/7) A tuple field-projection expression is used.
  --------------------------------------------------
   * In automaton "PROJECTION_EXPRS_TUPLES_FIELD":
     - edge tau do v[a] := v[b];
                    ^       ^
   * In group "TUPLE_FIELD_REFS_NAMED":
     - invariant c[a];
                  ^

  --------------------------------------------------
  (6/7) A tuple index-projection expression is used.
  --------------------------------------------------
   * In automaton "PROJECTION_EXPRS_TUPLES_FIELD":
     - edge tau do v[a] := v[b];
                    ^       ^
   * In group "PROJECTION_EXPRS_TUPLES_INDEX":
     - invariant (true, false)[0];
                              ^
     - invariant ((true, false), false)[0][0];
                                       ^  ^
   * In group "TUPLE_FIELD_REFS_NAMED":
     - invariant c[a];
                  ^
   * In group "TUPLE_FIELD_REFS_NAMELESS":
     - invariant (true, false)[0];
                              ^
   * In group "TUPLE_LITS":
     - invariant (true, false)[0];
                              ^

  ------------------------------------------------
  (7/7) A user-defined function reference is used.
  ------------------------------------------------
   * In group "FUNC_CALLS":
     - invariant intF(true);
                 ^
     - invariant extF(true);
                 ^
   * In group "FUNC_REFS_USER_DEF_EXT":
     - invariant f() = "a";
                 ^
   * In group "FUNC_REFS_USER_DEF_INT":
     - invariant f();
                 ^
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                 ^ ^
     - invariant g(extF);
                 ^ ^
